--- a/src/main/resources/com/example/compunettaller_udp/hello-view.fxml
+++ b/src/main/resources/com/example/compunettaller_udp/hello-view.fxml
@@ -1,16 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.compunettaller_udp.HelloController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
-</VBox>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="346.0" prefWidth="665.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.compunettaller_udp.controllers.Controller">
+   <children>
+      <Button fx:id="sendBt" layoutX="113.0" layoutY="295.0" mnemonicParsing="false" text="Send" />
+      <TextArea fx:id="chat" editable="false" layoutX="295.0" layoutY="75.0" prefHeight="245.0" prefWidth="335.0" />
+      <Text layoutX="295.0" layoutY="61.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Chisme" />
+      <VBox layoutX="24.0" layoutY="48.0" prefHeight="228.0" prefWidth="221.0">
+         <children>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Ip Destination" />
+            <TextField fx:id="IpTF" promptText="Ip destination" />
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Port Destination" />
+            <TextField fx:id="portTF" promptText="Port Destination" />
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Messege" />
+            <TextArea fx:id="message" prefHeight="118.0" prefWidth="184.0" promptText="Message" />
+         </children>
+      </VBox>
+      <Text layoutX="136.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CHISME CONNECTION UDP" wrappingWidth="393.13671875">
+         <font>
+            <Font name="System Bold Italic" size="25.0" />
+         </font>
+      </Text>
+   </children>
+</AnchorPane>
