--- a/src/main/resources/com/example/compunettaller_udp/hello-view.fxml
+++ b/src/main/resources/com/example/compunettaller_udp/hello-view.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -10,7 +11,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="346.0" prefWidth="665.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.compunettaller_udp.controllers.Controller">
    <children>
-      <Button fx:id="sendBt" layoutX="113.0" layoutY="295.0" mnemonicParsing="false" text="Send" />
+      <Button fx:id="sendBt" layoutX="113.0" layoutY="295.0" mnemonicParsing="false" onAction="#sentChat" text="Send" />
       <TextArea fx:id="chat" editable="false" layoutX="295.0" layoutY="75.0" prefHeight="245.0" prefWidth="335.0" />
       <Text layoutX="295.0" layoutY="61.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Chisme" />
       <VBox layoutX="24.0" layoutY="48.0" prefHeight="228.0" prefWidth="221.0">
@@ -23,10 +24,14 @@
             <TextArea fx:id="message" prefHeight="118.0" prefWidth="184.0" promptText="Message" />
          </children>
       </VBox>
-      <Text layoutX="136.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CHISME CONNECTION UDP" wrappingWidth="393.13671875">
+      <Text layoutX="69.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CHISME CONNECTION UDP" wrappingWidth="393.13671875">
          <font>
             <Font name="System Bold Italic" size="25.0" />
          </font>
       </Text>
+      <Label layoutX="473.0" layoutY="14.0" prefHeight="17.0" prefWidth="47.0" text="My Ip:" />
+      <Label layoutX="473.0" layoutY="39.0" prefHeight="17.0" prefWidth="47.0" text="My port:" />
+      <Label fx:id="myIp" layoutX="520.0" layoutY="14.0" prefHeight="17.0" prefWidth="112.0" />
+      <Label fx:id="myPort" layoutX="520.0" layoutY="39.0" prefHeight="17.0" prefWidth="86.0" />
    </children>
 </AnchorPane>
