--- a/src/main/resources/com/example/compunettaller_udp/hello-view.fxml
+++ b/src/main/resources/com/example/compunettaller_udp/hello-view.fxml
@@ -20,7 +20,7 @@
             <TextField fx:id="IpTF" promptText="Ip destination" />
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Port Destination" />
             <TextField fx:id="portTF" promptText="Port Destination" />
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Messege" />
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Message" />
             <TextArea fx:id="message" prefHeight="118.0" prefWidth="184.0" promptText="Message" />
          </children>
       </VBox>
